feat(27-01): replace placeholder tutors with real tutor data
- Replace 6 placeholder tutors with 5 real tutors from homepage
- Chris Kim: Head of Maths & Physics (97 Ext1, Medicine @ Newcastle)
- Nathan You: Tutor (95 Ext1, 99th %ile UCAT, Medicine @ Newcastle)
- John Park: Tutor (95 English Adv, 96 Ext1/Ext2, Medicine @ UNSW)
- Taehoon Kim: Tutor & Head Admin (95 Ext1, 1540 SAT, Optometry @ UNSW)
- Sowon Lee: Head of English (96 English Adv, 3rd in Baulko, Law @ UNSW)
- Update hero badge: '95%+ in HSC Mathematics' -> '95%+ in their HSC subjects'

--- a/about.html
+++ b/about.html
@@ -237,7 +237,7 @@
                     <p class="hero-tagline">We're Baulkham Hills High School graduates who know exactly what it takes to achieve top HSC results — because we've done it ourselves.</p>
                     <div class="hero-credential">
                         <svg viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M10 2l2.39 4.84 5.34.78-3.87 3.77.91 5.33L10 14.27l-4.77 2.45.91-5.33-3.87-3.77 5.34-.78L10 2z"/></svg>
-                        All tutors achieved 95%+ in HSC Mathematics
+                        All tutors achieved 95%+ in their HSC subjects
                     </div>
                 </div>
             </div>
@@ -260,7 +260,7 @@
                 </div>
             </div>
         </section>
-        <!-- Tutors Section - PLACEHOLDER: Replace tutor data with real information -->
+        <!-- Tutors Section -->
         <section class="section section--gray">
             <div class="container">
                 <div class="section-header animate-on-scroll">
@@ -268,98 +268,74 @@
                     <p class="section-subtitle">Expert educators who combine academic excellence with a genuine passion for helping students succeed.</p>
                 </div>
                 <div class="tutor-grid">
-                    <!-- Tutor 1 - PLACEHOLDER -->
+                    <!-- Chris Kim - Head of Mathematics & Physics -->
                     <div class="tutor-card animate-on-scroll">
-                        <img src="https://ui-avatars.com/api/?name=Brian+Kim&background=7c3aed&color=fff&size=240" alt="Brian Kim" class="tutor-photo">
-                        <h3 class="tutor-name">Brian Kim</h3>
+                        <img src="images/chris.jpg" alt="Chris Kim" class="tutor-photo">
+                        <h3 class="tutor-name">Chris Kim</h3>
                         <p class="tutor-credentials">
-                            <span class="tutor-credential-highlight">99.75 ATAR</span> | BHHS Graduate<br>
-                            UNSW Computer Science<br>
-                            5+ years tutoring experience
+                            <span class="tutor-credential-highlight">Head of Mathematics & Physics</span><br>
+                            BHHS Graduate | 97 Maths Ext1 | Medicine @ Newcastle
                         </p>
                         <div class="tutor-subjects">
-                            <span class="subject-tag">Extension 2 Maths</span>
-                            <span class="subject-tag">Extension 1 Maths</span>
-                            <span class="subject-tag">Physics</span>
+                            <span class="subject-tag">93 Maths Ext2</span>
+                            <span class="subject-tag">95 Physics</span>
+                            <span class="subject-tag">98th %ile UCAT</span>
                         </div>
                     </div>
 
-                    <!-- Tutor 2 - PLACEHOLDER -->
+                    <!-- Nathan You - Tutor -->
                     <div class="tutor-card animate-on-scroll">
-                        <img src="https://ui-avatars.com/api/?name=Sarah+Chen&background=7c3aed&color=fff&size=240" alt="Sarah Chen" class="tutor-photo">
-                        <h3 class="tutor-name">Sarah Chen</h3>
+                        <img src="images/nathan.jpg" alt="Nathan You" class="tutor-photo">
+                        <h3 class="tutor-name">Nathan You</h3>
                         <p class="tutor-credentials">
-                            <span class="tutor-credential-highlight">99.50 ATAR</span> | BHHS Graduate<br>
-                            USYD Pharmacy<br>
-                            4+ years tutoring experience
+                            <span class="tutor-credential-highlight">Tutor</span><br>
+                            BHHS Graduate | 95 Maths Ext1 | Medicine @ Newcastle
                         </p>
                         <div class="tutor-subjects">
-                            <span class="subject-tag">Chemistry</span>
-                            <span class="subject-tag">Extension 1 Maths</span>
-                            <span class="subject-tag">Biology</span>
+                            <span class="subject-tag">95 Maths Ext2</span>
+                            <span class="subject-tag">99th %ile UCAT</span>
                         </div>
                     </div>
 
-                    <!-- Tutor 3 - PLACEHOLDER -->
+                    <!-- John Park - Tutor -->
                     <div class="tutor-card animate-on-scroll">
-                        <img src="https://ui-avatars.com/api/?name=Michael+Lee&background=7c3aed&color=fff&size=240" alt="Michael Lee" class="tutor-photo">
-                        <h3 class="tutor-name">Michael Lee</h3>
+                        <img src="images/john.jpg" alt="John Park" class="tutor-photo">
+                        <h3 class="tutor-name">John Park</h3>
                         <p class="tutor-credentials">
-                            <span class="tutor-credential-highlight">98.90 ATAR</span> | BHHS Graduate<br>
-                            UNSW Engineering<br>
-                            3+ years tutoring experience
+                            <span class="tutor-credential-highlight">Tutor</span><br>
+                            BHHS Graduate | 95 English Adv | Medicine @ UNSW
                         </p>
                         <div class="tutor-subjects">
-                            <span class="subject-tag">Physics</span>
-                            <span class="subject-tag">Extension 1 Maths</span>
-                            <span class="subject-tag">Advanced Maths</span>
+                            <span class="subject-tag">96 Maths Ext1</span>
+                            <span class="subject-tag">96 Maths Ext2</span>
                         </div>
                     </div>
 
-                    <!-- Tutor 4 - PLACEHOLDER -->
+                    <!-- Taehoon Kim - Tutor & Head Admin -->
                     <div class="tutor-card animate-on-scroll">
-                        <img src="https://ui-avatars.com/api/?name=Emily+Wang&background=7c3aed&color=fff&size=240" alt="Emily Wang" class="tutor-photo">
-                        <h3 class="tutor-name">Emily Wang</h3>
+                        <img src="images/taehoon.jpg" alt="Taehoon Kim" class="tutor-photo" style="object-position: center top;">
+                        <h3 class="tutor-name">Taehoon Kim</h3>
                         <p class="tutor-credentials">
-                            <span class="tutor-credential-highlight">99.25 ATAR</span> | BHHS Graduate<br>
-                            USYD Law / Arts<br>
-                            4+ years tutoring experience
+                            <span class="tutor-credential-highlight">Tutor & Head Admin</span><br>
+                            BHHS Graduate | 95 Maths Ext1 | Optometry @ UNSW
                         </p>
                         <div class="tutor-subjects">
-                            <span class="subject-tag">English Advanced</span>
-                            <span class="subject-tag">English Extension 1</span>
+                            <span class="subject-tag">1540 SAT</span>
+                            <span class="subject-tag">4 years experience</span>
                         </div>
                     </div>
 
-                    <!-- Tutor 5 - PLACEHOLDER -->
+                    <!-- Sowon Lee - Head of English -->
                     <div class="tutor-card animate-on-scroll">
-                        <img src="https://ui-avatars.com/api/?name=David+Patel&background=7c3aed&color=fff&size=240" alt="David Patel" class="tutor-photo">
-                        <h3 class="tutor-name">David Patel</h3>
+                        <img src="images/soiwon.jpg" alt="Sowon Lee" class="tutor-photo" style="object-position: center 30%; transform: scale(0.85);">
+                        <h3 class="tutor-name">Sowon Lee</h3>
                         <p class="tutor-credentials">
-                            <span class="tutor-credential-highlight">99.60 ATAR</span> | BHHS Graduate<br>
-                            USYD Medicine<br>
-                            5+ years tutoring experience
+                            <span class="tutor-credential-highlight">Head of English</span><br>
+                            BHHS Graduate | 96 English Adv | Law @ UNSW
                         </p>
                         <div class="tutor-subjects">
-                            <span class="subject-tag">Chemistry</span>
-                            <span class="subject-tag">Physics</span>
-                            <span class="subject-tag">Extension 2 Maths</span>
-                        </div>
-                    </div>
-
-                    <!-- Tutor 6 - PLACEHOLDER -->
-                    <div class="tutor-card animate-on-scroll">
-                        <img src="https://ui-avatars.com/api/?name=Jessica+Nguyen&background=7c3aed&color=fff&size=240" alt="Jessica Nguyen" class="tutor-photo">
-                        <h3 class="tutor-name">Jessica Nguyen</h3>
-                        <p class="tutor-credentials">
-                            <span class="tutor-credential-highlight">98.85 ATAR</span> | BHHS Graduate<br>
-                            UNSW Commerce<br>
-                            3+ years tutoring experience
-                        </p>
-                        <div class="tutor-subjects">
-                            <span class="subject-tag">Advanced Maths</span>
-                            <span class="subject-tag">Standard Maths</span>
-                            <span class="subject-tag">Economics</span>
+                            <span class="subject-tag">3rd in Baulko English</span>
+                            <span class="subject-tag">20+ students mentored</span>
                         </div>
                     </div>
                 </div>
