feat: slim tutors section to 2-tutor preview with About link

--- a/index.html
+++ b/index.html
@@ -1869,6 +1869,23 @@
             color: var(--gray-500);
         }
 
+        .trust-see-all {
+            display: block;
+            text-align: center;
+            color: var(--purple-600);
+            font-family: var(--font-body);
+            font-size: 1rem;
+            font-weight: 600;
+            text-decoration: none;
+            margin: 32px auto 24px;
+            transition: color 0.2s ease;
+        }
+
+        .trust-see-all:hover {
+            color: var(--purple-700);
+            text-decoration: underline;
+        }
+
         .trust-schools {
             text-align: center;
             color: var(--gray-500);
@@ -6374,60 +6391,6 @@
                         </ul>
                     </article>
 
-                    <!-- Nathan You -->
-                    <article class="tutor-card">
-                        <div class="tutor-image">
-                            <img src="images/nathan.jpg" alt="Nathan You, Tutor at BEAM Academy" width="400" height="400" loading="lazy">
-                        </div>
-                        <h3 class="tutor-name">Nathan You</h3>
-                        <div class="tutor-role">Tutor</div>
-                        <div class="tutor-trifecta">
-                            <span class="trifecta-badge trifecta-school">BHHS Graduate</span>
-                            <span class="trifecta-badge trifecta-hsc">95 Maths Ext1</span>
-                            <span class="trifecta-badge trifecta-uni">Medicine @ Newcastle</span>
-                        </div>
-                        <ul class="tutor-credentials">
-                            <li>95 Maths Ext2</li>
-                            <li>99th percentile UCAT</li>
-                        </ul>
-                    </article>
-
-                    <!-- John Park -->
-                    <article class="tutor-card">
-                        <div class="tutor-image">
-                            <img src="images/john.jpg" alt="John Park, Tutor at BEAM Academy" width="400" height="400" loading="lazy">
-                        </div>
-                        <h3 class="tutor-name">John Park</h3>
-                        <div class="tutor-role">Tutor</div>
-                        <div class="tutor-trifecta">
-                            <span class="trifecta-badge trifecta-school">BHHS Graduate</span>
-                            <span class="trifecta-badge trifecta-hsc">95 English Adv</span>
-                            <span class="trifecta-badge trifecta-uni">Medicine @ UNSW</span>
-                        </div>
-                        <ul class="tutor-credentials">
-                            <li>96 Maths Ext1</li>
-                            <li>96 Maths Ext2</li>
-                        </ul>
-                    </article>
-
-                    <!-- Taehoon Kim -->
-                    <article class="tutor-card">
-                        <div class="tutor-image">
-                            <img src="images/taehoon.jpg" alt="Taehoon Kim, Tutor & Head Admin at BEAM Academy" width="400" height="400" loading="lazy" style="object-position: center top;">
-                        </div>
-                        <h3 class="tutor-name">Taehoon Kim</h3>
-                        <div class="tutor-role">Tutor & Head Admin</div>
-                        <div class="tutor-trifecta">
-                            <span class="trifecta-badge trifecta-school">BHHS Graduate</span>
-                            <span class="trifecta-badge trifecta-hsc">95 Maths Ext1</span>
-                            <span class="trifecta-badge trifecta-uni">Optometry @ UNSW</span>
-                        </div>
-                        <ul class="tutor-credentials">
-                            <li>1540 SAT</li>
-                            <li>4 years tutoring experience</li>
-                        </ul>
-                    </article>
-
                     <!-- Sowon Lee -->
                     <article class="tutor-card">
                         <div class="tutor-image">
@@ -6443,11 +6406,12 @@
                         <ul class="tutor-credentials">
                             <li>3rd in Baulko English Adv</li>
                             <li>Mentored 20+ Baulko HSC students</li>
-                            <li>Top student achieved 96</li>
                             <li>2x 99.95 ATAR students</li>
                         </ul>
                     </article>
                 </div>
+
+                <a href="about.html" class="trust-see-all">Meet all our tutors →</a>
 
                 <p class="trust-schools">Tutors who know your school's assessment style - Baulko, James Ruse, Epping Boys</p>
 
